# openai-agent-chatbot

./: .gitignore  LICENSE  README.md  docker-compose.yaml
chatbot-ai-service/: .env.example  Dockerfile  requirements.txt
chatbot-ai-service/src/: main.py
chatbot-ai-service/src/agents/: chat_agent.py
chatbot-ai-service/src/core/: config.py
chatbot-ai-service/src/prompts/: chat_system.md
chatbot-ai-service/src/routers/: chat.py  health.py
chatbot-ai-service/src/streaming/: runner.py
chatbot-ai-service/tests/: conftest.py
chatbot-ai-service/tests/unit/: test_sse_events.py
chatbot-be/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
chatbot-be/scripts/: db_init.sh
chatbot-be/src/: database.py  main.py
chatbot-be/src/alembic/: env.py
chatbot-be/src/alembic/versions/: 5c4524a46621_add_role_enum_and_fix_timestamps.py  ac15e28eac25_initial_tables.py
chatbot-be/src/api/routes/: chat.py  sessions.py
chatbot-be/src/clients/: ai_service.py  base.py
chatbot-be/src/core/: config.py
chatbot-be/src/models/: __init__.py  chat_message.py  chat_session.py
chatbot-be/src/schemas/: chat.py
chatbot-be/tests/: conftest.py
chatbot-be/tests/integration/: test_chat_persistence.py
langgraph-chatbot/: README.md  docker-compose.yml
langgraph-chatbot/ai-service/: .dockerignore  Dockerfile  requirements.txt
langgraph-chatbot/ai-service/data/: sample.db  seed.py  train.py
langgraph-chatbot/ai-service/scripts/: build_vanna_train.sh
langgraph-chatbot/ai-service/src/: main.py
langgraph-chatbot/docs/: END_TO_END.md
(+14 files in other folders)
