[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-be"
version = "0.1.0"
description = "FastAPI backend with async SQLAlchemy and Alembic"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.3",
    "sqlalchemy[asyncio]==2.0.41",
    "sqlmodel==0.0.24",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "alembic==1.16.1",
    "pydantic-settings==2.9.1",
    "python-dotenv==1.0.0",
    "httpx==0.28.1",
    "loguru==0.7.3",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.25",
]




[tool.setuptools.packages.find]
where = ["."]
